--- a/src/app/features/blog/components/blog-card/blog-card.component.html
+++ b/src/app/features/blog/components/blog-card/blog-card.component.html
@@ -30,7 +30,7 @@
           <i class="fas fa-trash-alt"></i> Eliminar
         </button>
       </div>
-      <a [routerLink]="['/blog/', blog.id]" class="read-more" [attr.aria-label]="'Leer más sobre ' + blog.title">
+      <a [routerLink]="['/blogs', blog.id]" class="read-more" [attr.aria-label]="'Leer más sobre ' + blog.title">
         <i class="fas fa-arrow-right"></i> Leer más
       </a>
     </div>
